--- a/Practicando Frontend/index.html
+++ b/Practicando Frontend/index.html
@@ -1,37 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<title>First Page Application</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/ed-grid.min.css">
+	<link rel="stylesheet" href="dist/pfront.min.css">
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="js/script.js"></script>
 </head>
 <body>
 	<!-- Algunos mensaje importantes-->
-	<header>
-		<div class="message-important">
+	<div class="message-important">
+		<div class="message-important_form">
 			
 		</div>
-	</header>
-	<!--Navegación-->
+	</div>
+	
 	<nav class="navigation">
-		<ul class="navigation-navbar">
-			<li class="navigation-navbar__item">
-				<a href="#" class="navigation-navbar__item-link">Contacts Us</a>
+		<ul class="navigation__items">
+			<li class="navigation__item">
+				<i class="fa fa-reorder fa-2x navigation-spicker">
+				</i>
 			</li>
-			<li class="navigation-navbar__item">
-				<a href="#" class="navigation-navbar__item-link">Clients</a>
-			</li>
-			<li class="navigation-navbar__item right">
-				<div class="content-user" onclick="activeContenUser()">
-					<h5 class="content-user__name">Hi Benji Villarreal</h5>
-					<img class="content-user__imagen-profile" src="http://lorempixel.com/g/90/90/" alt="">
-				</div>		
+			<li class="navigation__item navigation__item--right">
+				<div class="info-user-inline">
+					<img src="img/logo.png" class="info-user-inline__photo" alt="Not Found Photo">
+					<small class="info-user-inline__name">Benji Villarreal M.</small>
+				</div>
 			</li>
 		</ul>
 	</nav>
+	
 	<main class="container">
+		<aside class="aside">
+			<ul class="aside__items">
+				<li class="aside__item">
+					<i class="fa fa-reorder fa-1x">
+					</i> Mantener Empleado
+					<ul class="aside__subItems">
+						<li class="aside__item">
+							<i class="fa fa-reorder fa-1x">
+							</i> Registrar Empleado
+						</li>
+						<li class="aside__item">
+							<i class="fa fa-reorder fa-1x">
+							</i> Listar Empleado
+						</li>
+					</ul>
+				</li>
+				<li class="aside__item">
+					<i class="fa fa-reorder fa-1x">
+				</i> Registrar Pedido Venta
+				</li>
+			</ul>
+		</aside>
+		<section class="container-information ed-container">
 		
+		</section>
 	</main>
 </body>
 </html>
